--- a/.gitignore
+++ b/.gitignore
@@ -72,7 +72,7 @@ fabric.properties
 .idea/caches/build_file_checksums.ser
 
 ### Composer
-/plugins/system/joomlasvg/vendor/**
+/vendor/**
 
 ### Extension installation file
-plg_system_joomlasvg.zip
+release/*
