--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,14 @@
 		}
 	],
 	"config": {
-		"vendor-dir": "plugins/system/joomlasvg/vendor"
+		"platform": {
+			"php": "7.2.0"
+		}
 	},
 	"minimum-stability": "stable",
 	"require": {
-		"php": ">=7.1.0",
+		"php": ">=7.2.0",
 		"ext-json": "*",
-		"enshrined/svg-sanitize": "^0.15.0",
 		"ext-fileinfo": "*"
 	}
 }
